--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "knab-engineer-recruitment-test",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://bramjoosten.nl/crypto-converter",
+  "homepage": "https://bramjoosten.nl/crypto-converter",
   "dependencies": {
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
@@ -13,8 +13,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-saga": "^1.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
