--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://bramjoosten.nl/crypto-converter",
   "dependencies": {
     "axios": "^0.19.0",
+    "fetch-mock": "^7.3.9",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -12,8 +14,11 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
-    "redux-saga": "^1.0.5"
+    "redux-mock-store": "^1.5.3",
+    "redux-saga": "^1.0.5",
+    "sinon": "^7.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
