--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "fetch-mock": "^7.3.9",
+    "gsap": "^2.1.3",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
